clang_error.txt
<stdin>:16:1: error: expected instruction opcode
   16 | }
      | ^
1 error generated.
